deployment/services.yaml
# auth-service-deployment-1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-1-0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
      version: "1.0"
  template:
    metadata:
      labels:
        app: auth-service
        version: "1.0"
    spec:
      containers:
      - name: auth-service
        image: trniel/authservice:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
# auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels: 
    app: auth-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: auth-service
---
# proxy-service-deployment-1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service-1-0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proxy-service
      version: "1.0"
  template:
    metadata:
      labels:
        app: proxy-service
        version: "1.0"
    spec:
      containers:
      - name: proxy-service
        image: trniel/proxyservice:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
# proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  labels: 
    app: proxy-service
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: proxy-service
