deployment/ingress.yaml
# Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: waitroom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - waitroom-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: auth-service
        port:
          number: 8080
  - match:
    - headers:
        waitroom-test:
          exact: travis
    route:
    - destination:
        host: sessionregulator-service
        port:
          number: 8080
